src/renderer/components/message/styles.module.scss
$shortcutMenuWidth: 100px;

.messageFooter {
  display: flex;
  justify-content: space-between;
}

.shortcutMenu {
  display: flex;
  align-items: center;
  flex: 0 0 $shortcutMenuWidth;
  visibility: hidden;
  width: $shortcutMenuWidth;

  &.visible {
    visibility: visible;
  }
}

